이미지 링크수정

--- a/contact.html
+++ b/contact.html
@@ -63,11 +63,11 @@
           <div class="lang">
             <div class="lang_btn on">
               <p>KOR</p>
-              <img src="/img/language_on.svg" alt="" />
+              <img src="img/language_on.svg" alt="" />
             </div>
             <div class="lang_btn off">
               <p>ENG</p>
-              <img src="/img/language_off.svg" alt="" />
+              <img src="img/language_off.svg" alt="" />
             </div>
           </div>
           <div class="close_mobile_btn">
