--- a/qna_view.html
+++ b/qna_view.html
@@ -63,11 +63,11 @@
           <div class="lang">
             <div class="lang_btn on">
               <p>KOR</p>
-              <img src="/img/language_on.svg" alt="" />
+              <img src="img/language_on.svg" alt="" />
             </div>
             <div class="lang_btn off">
               <p>ENG</p>
-              <img src="/img/language_off.svg" alt="" />
+              <img src="img/language_off.svg" alt="" />
             </div>
           </div>
           <div class="close_mobile_btn">
@@ -145,7 +145,7 @@
               <div class="qna">
                 <div class="que_title">
                   <div class="title">
-                    <img src="/img/question.svg" alt="" />
+                    <img src="img/question.svg" alt="" />
                     <div>
                       <h2><b>[질문]</b> 목이랑 날개뼈 척추사이가 아파요</h2>
                       <p>질문여 <span>2023.08.29 19:10</span></p>
