--- a/myfaq.html
+++ b/myfaq.html
@@ -63,11 +63,11 @@
           <div class="lang">
             <div class="lang_btn on">
               <p>KOR</p>
-              <img src="/img/language_on.svg" alt="" />
+              <img src="img/language_on.svg" alt="" />
             </div>
             <div class="lang_btn off">
               <p>ENG</p>
-              <img src="/img/language_off.svg" alt="" />
+              <img src="img/language_off.svg" alt="" />
             </div>
           </div>
           <div class="close_mobile_btn">
@@ -149,7 +149,7 @@
               <div class="qna_list">
                 <div class="que">
                   <div class="left">
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>
                       tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?
                       <span>2023.08.21 19:10</span>
@@ -161,7 +161,7 @@
                   </div>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -176,7 +176,7 @@
               <div class="qna_list">
                 <div class="que">
                   <div class="left">
-                    <b><img src="/img/question_02.svg" alt="" /></b>
+                    <b><img src="img/question_02.svg" alt="" /></b>
                     <p>
                       tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?<span
                         >2023.08.21 19:10</span
@@ -189,7 +189,7 @@
                   </div>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -206,7 +206,7 @@
               <div class="qna_list">
                 <div class="que">
                   <div class="left">
-                    <b><img src="/img/question.svg" alt="" /></b>
+                    <b><img src="img/question.svg" alt="" /></b>
                     <p>
                       tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?<span
                         >2023.08.21 19:10</span
@@ -220,7 +220,7 @@
                   </div>
                 </div>
                 <div class="ans">
-                  <b><img src="/img/answer.svg" alt="" /></b>
+                  <b><img src="img/answer.svg" alt="" /></b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
                     허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
@@ -235,7 +235,7 @@
               <div class="qna_list">
                 <div class="que">
                   <div class="left">
-                    <b><img src="/img/question_02.svg" alt="" /></b>
+                    <b><img src="img/question_02.svg" alt="" /></b>
                     <p>
                       tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?<span
                         >2023.08.21 19:10</span
