--- a/qna.html
+++ b/qna.html
@@ -63,11 +63,11 @@
           <div class="lang">
             <div class="lang_btn on">
               <p>KOR</p>
-              <img src="/img/language_on.svg" alt="" />
+              <img src="img/language_on.svg" alt="" />
             </div>
             <div class="lang_btn off">
               <p>ENG</p>
-              <img src="/img/language_off.svg" alt="" />
+              <img src="img/language_off.svg" alt="" />
             </div>
           </div>
           <div class="close_mobile_btn">
@@ -144,7 +144,7 @@
         <div class="inner">
           <div class="search">
             <div class="main_logo">
-              <img src="/img/main_logo.svg" alt="" />
+              <img src="img/main_logo.svg" alt="" />
             </div>
             <div class="input_wrap">
               <form action="">
@@ -215,7 +215,7 @@
             </div>
             <div class="que" onclick="location.href='qna_view.html'">
               <div class="title">
-                <b><img src="/img/question_02.svg" alt="" /></b>
+                <b><img src="img/question_02.svg" alt="" /></b>
                 <div>
                   <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   <span>2023.08.29</span>
@@ -225,7 +225,7 @@
             </div>
             <div class="que">
               <div class="title">
-                <b><img src="/img/question.svg" alt="" /></b>
+                <b><img src="img/question.svg" alt="" /></b>
                 <div>
                   <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   <span>2023.08.29</span>
@@ -235,7 +235,7 @@
             </div>
             <div class="que">
               <div class="title">
-                <b><img src="/img/question.svg" alt="" /></b>
+                <b><img src="img/question.svg" alt="" /></b>
                 <div>
                   <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   <span>2023.08.29</span>
