--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
             <!-- <a href="faq.html">더보기 <i class="fa-solid fa-angle-right"></i></a> -->
           </div>
           <ul class="tab">
-            <li data-tab="tab1" class="active">자주하는 질문 첫번째 그리고 두번째</li>
-            <li data-tab="tab2">자주하는 질문 두번째 챕터</li>
+            <li data-tab="tab1" class="active">자주하는 질문1</li>
+            <li data-tab="tab2">두번째 자주하는 질문</li>
             <li data-tab="tab3">척추</li>
-            <li data-tab="tab4">케이컨 플래닛 와글와글</li>
+            <li data-tab="tab4">물리치료</li>
           </ul>
           <div class="contents">
             <div class="list tab1 active">
