--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="Keywords" content="All That Spine" />
     <meta name="author" content="All That Spine" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="format-detection" content="telephone=no" />
     <!-- FAVICON -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
