--- a/mypage.html
+++ b/mypage.html
@@ -7,8 +7,10 @@
     <meta name="Keywords" content="All That Spine" />
     <meta name="author" content="All That Spine" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="format-detection" content="telephone=no" />
     <!-- FAVICON -->
-    <link rel="”shortcut" icon” href="img/favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- CDN -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- CSS -->
