--- a/qna_write.html
+++ b/qna_write.html
@@ -205,7 +205,7 @@
             </div>
             <div>
               <p>사업자 등록번호 : 123-12-12345</p>
-              <p><i class="fa-solid fa-location-dot"></i> 주소 : 경상북도 포항시 북구 포스코대로 256</p>
+              <p>주소 : 경상북도 포항시 북구 포스코대로 256</p>
             </div>
             <div class="contact">
               <a href="contact.html">Contact All That Spine <i class="fa-solid fa-angle-right"></i></a>
