--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,7 @@
               <p>주소 : 경상북도 포항시 북구 포스코대로 256</p>
             </div>
             <div class="contact">
-              <a href="contact.html">Contact All That Spine <i class="fa-solid fa-angle-right"></i></a>
+              <a href="contact.html">Contact All That Spine</a>
             </div>
             <div class="tel">
               <p><i class="fa-solid fa-phone"></i> 82-11-2222-3333</p>
