--- a/login.html
+++ b/login.html
@@ -140,10 +140,12 @@
     <main>
       <section class="login_container">
         <article>
+          <h2 class="title">Login</h2>
           <form action="">
             <div class="block">
-              <input id="loginId" type="text" placeholder="아이디" required />
+              <input id="loginId" type="text" placeholder="아이디" onkeyup="checkReg(event)" required />
               <label for="loginId">아이디</label>
+              <i class="fa-solid fa-xmark login_close"></i>
             </div>
             <div class="block">
               <input id="loginPass" type="password" placeholder="비밀번호" required />
@@ -246,3 +248,13 @@
     </footer>
   </body>
 </html>
+
+<script>
+  function checkReg(event) {
+    const regExp = /[^0-9a-zA-Z]/g; // 숫자와 영문자만 허용
+    const del = event.target;
+    if (regExp.test(del.value)) {
+      del.value = del.value.replace(regExp, '');
+    }
+  }
+</script>
